--- a/plugins/orchestrator/package.json
+++ b/plugins/orchestrator/package.json
@@ -40,6 +40,7 @@
     "@backstage/core-components": "^0.13.6",
     "@backstage/core-plugin-api": "^1.7.0",
     "@backstage/errors": "^1.2.3",
+    "@backstage/plugin-catalog": "^1.15.1",
     "@backstage/plugin-scaffolder-common": "^1.4.2",
     "@backstage/plugin-scaffolder-react": "^1.5.1",
     "@backstage/types": "^1.1.1",
@@ -58,10 +59,12 @@
     "@rjsf/material-ui-v5": "npm:@rjsf/material-ui@5.7.3",
     "@rjsf/utils": "5.7.3",
     "@rjsf/validator-ajv8": "5.7.3",
+    "@types/pluralize": "^0.0.33",
     "json-schema": "^0.4.0",
+    "moment": "^2.29.0",
+    "pluralize": "^8.0.0",
     "react-hook-form": "^7.45.1",
     "react-json-view": "^1.21.3",
-    "moment": "^2.29.0",
     "react-moment": "^1.1.3",
     "react-use": "^17.4.0",
     "vscode-languageserver-types": "^3.16.0"
