--- a/plugins/orchestrator/package.json
+++ b/plugins/orchestrator/package.json
@@ -46,6 +46,7 @@
     "@backstage/core-plugin-api": "^1.7.0",
     "@backstage/errors": "^1.2.3",
     "@backstage/plugin-catalog": "^1.15.1",
+    "@backstage/plugin-scaffolder": "^1.17.0",
     "@backstage/plugin-scaffolder-common": "^1.4.2",
     "@backstage/plugin-scaffolder-react": "^1.5.1",
     "@backstage/types": "^1.1.1",
@@ -66,10 +67,12 @@
     "@material-ui/lab": "^4.0.0-alpha.45",
     "@rjsf/core": "^3.2.1",
     "@rjsf/core-v5": "npm:@rjsf/core@5.7.3",
+    "@rjsf/material-ui": "^5.15.1",
     "@rjsf/material-ui-v5": "npm:@rjsf/material-ui@5.7.3",
     "@rjsf/utils": "5.7.3",
     "@rjsf/validator-ajv8": "5.7.3",
     "json-schema": "^0.4.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.0",
     "react-hook-form": "^7.45.1",
     "react-json-view": "^1.21.3",
