chore(orchestrator): first component test

--- a/plugins/orchestrator/package.json
+++ b/plugins/orchestrator/package.json
@@ -91,10 +91,12 @@
     "@backstage/test-utils": "^1.4.4",
     "@janus-idp/cli": "1.6.0",
     "@storybook/react": "^7.5.3",
+    "@testing-library/cypress": "^10.0.1",
     "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "8.0.1",
     "@types/json-schema": "^7.0.12",
     "css-loader": "^6.5.1",
+    "cypress": "^13.6.3",
     "file-loader": "^5.0.2",
     "filemanager-webpack-plugin": "^6.1.4",
     "monaco-editor-webpack-plugin": "7.0.1",
