--- a/plugins/orchestrator/package.json
+++ b/plugins/orchestrator/package.json
@@ -90,15 +90,18 @@
     "@backstage/dev-utils": "1.0.22",
     "@backstage/test-utils": "^1.4.4",
     "@janus-idp/cli": "1.6.0",
+    "@playwright/test": "^1.41.1",
     "@storybook/react": "^7.5.3",
     "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "8.0.1",
     "@types/json-schema": "^7.0.12",
+    "@types/node": "^20.11.10",
     "css-loader": "^6.5.1",
     "file-loader": "^5.0.2",
     "filemanager-webpack-plugin": "^6.1.4",
     "monaco-editor-webpack-plugin": "7.0.1",
     "monaco-yaml": "^4.0.4",
+    "playwright": "1.41.1",
     "sass": "^1.54.5",
     "sass-loader": "^10.3.1",
     "source-map-loader": "^2.0.2",
