--- a/app-config.yaml
+++ b/app-config.yaml
@@ -136,3 +136,14 @@ dynamicPlugins:
         - bindTarget: 'remotePlugins.Scaffolder.scaffolderPlugin.externalRoutes'
           bindMap:
             registerComponent: 'catalogImportPlugin.routes.importPage'
+
+orchestrator:
+  sonataFlowService:
+    baseUrl: http://localhost
+    port: 8099
+    autoStart: true
+    workflowsSource:
+      gitRepositoryUrl: https://github.com/tiagodolphine/backstage-orchestrator-workflows
+      localPath: /tmp/orchestrator/repository
+  dataIndexService:
+    url: http://localhost:8099
