--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -47,7 +47,8 @@
     "express": "^4.18.2",
     "express-promise-router": "^4.1.1",
     "pg": "^8.11.3",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "@janus-idp/backstage-plugin-orchestrator-backend": "1.7.2"
   },
   "devDependencies": {
     "@backstage/cli": "0.26.2",
