--- a/app-config.yaml
+++ b/app-config.yaml
@@ -40,17 +40,8 @@ permission:
     pluginsWithPermissions:
       - orchestrator
       - orchestrator-backend
-    policies-csv-file: /home/rgolan/src/backstage-plugins/rbac-policy.csv
-integrations:
-  github:
-    - host: github.com
-      # This is a Personal Access Token or PAT from GitHub. You can find out how to generate this token, and more information
-      # about setting up the GitHub integration here: https://backstage.io/docs/getting-started/configuration#setting-up-a-github-integration
-      token: ${GITHUB_TOKEN}
-    ### Example for how to add your GitHub Enterprise instance using the API:
-    # - host: ghe.example.net
-    #   apiBaseUrl: https://ghe.example.net/api/v3
-    #   token: ${GHE_TOKEN}
+    policies-csv-file: ../../rbac-policy.csv
+
 
 proxy:
   '/test':
@@ -80,17 +71,7 @@ techdocs:
   publisher:
     type: 'local' # Alternatives - 'googleGcs' or 'awsS3'. Read documentation for using alternatives.
 
-auth:
-  # see https://backstage.io/docs/auth/ to learn about auth providers
-  environment: development
-  providers:
-    github:
-      development:
-        clientId: "****"
-        clientSecret: "****"
-        signIn:
-          resolvers:
-            - resolver: usernameMatchingUserEntityName
+
 
 scaffolder:
   {}
@@ -115,25 +96,10 @@ catalog:
         ]
 
   locations:
-    # Local example data, file locations are relative to the backend process, typically `packages/backend`
     - type: file
-      target: ../../examples/entities.yaml
-
-    # Local example template
-    - type: file
-      target: ../../examples/template/template.yaml
-      rules:
-        - allow: [Template]
-
-    # Local example organizational data
-    - type: file
-      target: ../../examples/org.yaml
-      rules:
-        - allow: [User, Group]
-
-    - type: file
-      target: /home/rgolan/src/parodos-dev/orchestrator-helm-chart/charts/orchestrator-k8s/locations/users.yaml
-
+      target: ../../locations/users.yaml
+    - type: url
+      target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/all.yaml
     ## Uncomment these lines to add more example data
     # - type: url
     #   target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/all.yaml
