--- a/plugins/orchestrator-backend/dist-dynamic/package.json
+++ b/plugins/orchestrator-backend/dist-dynamic/package.json
@@ -47,7 +47,6 @@
   ],
   "scripts": {},
   "dependencies": {
-    "@janus-idp/backstage-plugin-audit-log-node": "^1.2.0",
     "@janus-idp/backstage-plugin-rbac-common": "^1.6.1",
     "@urql/core": "^4.1.4",
     "ajv-formats": "^2.1.1",
@@ -64,13 +63,8 @@
     "axios": "^1.6.8"
   },
   "devDependencies": {},
-  "maintainers": [
-    "@janus-idp/maintainers-plugins",
-    "@janus-idp/orchestrator-codeowners"
-  ],
-  "author": "The Backstage Community",
-  "bundleDependencies": true,
   "peerDependencies": {
+    "@janus-idp/backstage-plugin-audit-log-node": "1.2.0",
     "@backstage/backend-app-api": "^0.7.5",
     "@backstage/backend-common": "^0.22.0",
     "@backstage/backend-dynamic-feature-service": "^0.2.10",
@@ -91,6 +85,12 @@
     "@backstage/plugin-scaffolder-node": "^0.4.4",
     "@backstage/types": "^1.1.1"
   },
+  "maintainers": [
+    "@janus-idp/maintainers-plugins",
+    "@janus-idp/orchestrator-codeowners"
+  ],
+  "author": "The Backstage Community",
+  "bundleDependencies": true,
   "overrides": {
     "@aws-sdk/util-utf8-browser": {
       "@smithy/util-utf8": "^2.0.0"
