--- a/plugins/orchestrator-backend/package.json
+++ b/plugins/orchestrator-backend/package.json
@@ -83,7 +83,6 @@
     "@backstage/plugin-scaffolder-backend": "^1.22.8",
     "@backstage/plugin-scaffolder-node": "^0.4.4",
     "@backstage/types": "^1.1.1",
-    "@janus-idp/backstage-plugin-audit-log-node": "1.2.0",
     "@janus-idp/backstage-plugin-orchestrator-common": "1.11.0",
     "@janus-idp/backstage-plugin-rbac-common": "1.6.1",
     "@urql/core": "^4.1.4",
@@ -104,6 +103,9 @@
     "@types/express": "4.17.21",
     "@types/fs-extra": "11.0.4",
     "@types/json-schema": "7.0.15"
+  },
+  "peerDependencies": {
+    "@janus-idp/backstage-plugin-audit-log-node": "1.2.0"
   },
   "maintainers": [
     "@janus-idp/maintainers-plugins",
