--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -16,8 +16,12 @@
     "clean": "backstage-cli package clean"
   },
   "dependencies": {
+    "@backstage/backend-app-api": "^0.7.2",
     "@backstage/backend-defaults": "^0.2.17",
+    "@backstage/backend-dynamic-feature-service": "^0.2.9",
     "@backstage/backend-plugin-api": "^0.6.17",
+    "@backstage/cli-node": "^0.2.5",
+    "@backstage/config-loader": "^1.8.0",
     "@backstage/plugin-app-backend": "^0.3.65",
     "@backstage/plugin-auth-backend": "^0.22.4",
     "@backstage/plugin-auth-backend-module-guest-provider": "^0.1.3",
@@ -29,14 +33,11 @@
     "@backstage/plugin-search-backend-module-catalog": "^0.1.23",
     "@backstage/plugin-search-backend-module-techdocs": "^0.1.22",
     "@backstage/plugin-techdocs-backend": "^1.10.4",
-    "@manypkg/get-packages": "^1.1.3",
-    "@backstage/config-loader": "^1.8.0",
-    "winston": "^3.11.0",
-    "@backstage/backend-app-api": "^0.7.2",
-    "@backstage/backend-dynamic-feature-service": "^0.2.9",
-    "@backstage/cli-node": "^0.2.5",
     "@janus-idp/backstage-plugin-rbac-backend": "*",
-    "app": "*"
+    "@manypkg/get-packages": "^1.1.3",
+    "app": "*",
+    "backstage-plugin-validation-backend": "^0.1.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@backstage/cli": "0.26.4"
