--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -38,7 +38,8 @@
     "@janus-idp/backstage-plugin-rbac-backend": "*",
     "@manypkg/get-packages": "^1.1.3",
     "app": "*",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "@janus-idp/backstage-plugin-orchestrator-backend": "*"
   },
   "devDependencies": {
     "@backstage/cli": "0.26.11"
