--- a/app-config.yaml
+++ b/app-config.yaml
@@ -18,7 +18,10 @@ backend:
     # Uncomment the following host directive to bind to specific interfaces
     # host: 127.0.0.1
   csp:
-    connect-src: ["'self'", 'http:', 'https:']
+    frame-ancestors: ['http://localhost:3000', 'http://localhost:7007']
+    script-src: ["'self'", "'unsafe-inline'", "'unsafe-eval'"]
+    script-src-elem: ["'self'", "'unsafe-inline'", "'unsafe-eval'"]
+    connect-src: ["'self'", 'http:', 'https:', 'data:']
     # Content-Security-Policy directives follow the Helmet format: https://helmetjs.github.io/#reference
     # Default Helmet Content-Security-Policy values can be removed by setting the key to false
   cors:
@@ -80,3 +83,7 @@ catalog:
 
 dynamicPlugins:
   frontend: {}
+
+orchestrator:
+  dataIndexService:
+    url: http://sonataflow-platform-data-index-route-sonataflow-infra.apps.ocp414.lab.local
